--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,21 +2,35 @@ version: '3.8'
 
 volumes:
   postgresql_data:
+  static_files:
 
 services:
   db:
     image: postgres:13
     volumes:
-      - postgresql_data:/var/lib/postgresql/data/
+      - ./postgresql_data:/var/lib/postgresql/data/
     env_file:
       - ./.env
   web:
-    image: yamdb
-    build: .
+    image: konerld/yamdb:latest
     restart: always
-    ports:
-      - "8000:8000"
+#    ports:
+#      - "8000:8000"
     depends_on:
       - db
+    volumes:
+      - ./static_files:/static
     env_file:
       - ./.env
+  nginx:
+    image: nginx:1.19.6
+    restart: always
+    ports:
+      - "80:80"
+    volumes:
+      - ./static_files:/static
+      - ./default.conf:/etc/nginx/conf.d/default.conf
+    env_file:
+      - ./.env
+    depends_on:
+      - web
