--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -44,7 +44,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: konerld/flask_hello:latest
+          tags: konerld/yamdb:latest
 
   deploy:
     runs-on: ubuntu-latest
@@ -57,9 +57,9 @@ jobs:
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            sudo docker pull konerld/flask_hello
+            sudo docker pull konerld/yamdb
             sudo docker stop $(sudo docker ps -a -q)
-            sudo docker run --rm -d -p 5000:5000 konerld/flask_hello
+            sudo docker-compose up
 
   send_message:
     runs-on: ubuntu-latest
