--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -56,6 +56,12 @@ jobs:
           script: |
             sudo docker pull konerld/yamdb
             sudo docker stop $(sudo docker ps -a -q)
+            echo "DB_ENGINE=django.db.backends.postgresql" >> .env
+            echo "DB_NAME={{secrets.PG_DB_NAME}}" >> .env
+            echo "POSTGRES_USER={{secrets.PG_USER}}" >> .env
+            echo "POSTGRES_PASSWORD={{secrets.PG_PASSWD}}" >> .env
+            echo "DB_HOST=db" >> .env
+            echo "DB_PORT=5432" >> .env
             sudo docker-compose up
 
   send_message:
