--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -43,10 +43,22 @@ jobs:
           push: true
           tags: konerld/yamdb:latest
 
+
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
     steps:
+      - name: copy start files via ssh password
+      uses: appleboy/scp-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        password: ${{ secrets.SRV_PASSWORD }}
+        key: ${{ secrets.SSH_KEY }}
+        source: >
+          docker-compose.yaml, default.conf,
+          # redoc.yaml, entrypoint.sh
+        target: "~/yamdb_final/"
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
         with:
@@ -56,13 +68,14 @@ jobs:
           script: |
             docker pull konerld/yamdb
             docker stop $(sudo docker ps -a -q)
-            echo "DB_ENGINE=django.db.backends.postgresql" >> .env
-            echo "DB_NAME={{secrets.PG_DB_NAME}}" >> .env
-            echo "POSTGRES_USER={{secrets.PG_USER}}" >> .env
-            echo "POSTGRES_PASSWORD={{secrets.PG_PASSWD}}" >> .env
-            echo "DB_HOST=db" >> .env
+            rm ~/yamdb_final/.env
+            echo "DB_ENGINE=django.db.backends.postgresql" >> ~/yamdb_final/.env
+            echo "DB_NAME={{secrets.PG_DB_NAME}}" >> ~/yamdb_final/.env
+            echo "POSTGRES_USER={{secrets.PG_USER}}" >> ~/yamdb_final/.env
+            echo "POSTGRES_PASSWORD={{secrets.PG_PASSWD}}" >> ~/yamdb_final/.env
+            echo "DB_HOST=db" >> ~/yamdb_final/.env
             echo "DB_PORT=5432" >> .env
-            docker-compose up
+            docker-compose -f ~/yamdb_final/docker-compose.yaml up
 
   send_message:
     runs-on: ubuntu-latest
