--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -48,16 +48,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
     steps:
-      - name: copy start files via ssh password
+      - name: copy file via ssh key
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
-          password: ${{ secrets.SRV_PASSWORD }}
+          port: 22
           key: ${{ secrets.SSH_KEY }}
-          source: >
-            docker-compose.yaml, default.conf,
-            # redoc.yaml, entrypoint.sh
+          source: "docker-compose.yaml, default.conf"
           target: "~/yamdb_final/"
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
