--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -46,7 +46,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
+    # needs: build_and_push_to_docker_hub
     steps:
       - name: copy file via ssh key
         uses: appleboy/scp-action@master
