--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -47,16 +47,16 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     # needs: build_and_push_to_docker_hub
-    steps:
-      - name: copy file via ssh key
-        uses: appleboy/scp-action@master
-        env:
-          HOST: ${{ secrets.HOST }}
-          USERNAME: ${{ secrets.USER }}
-          KEY: ${{ secrets.SSH_KEY }}
-        with:
-          source: "docker-compose.yaml, default.conf"
-          target: "/home/ubuuser/yamdb_final/"
+    # steps:
+    #   - name: copy file via ssh key
+    #     uses: appleboy/scp-action@master
+    #     env:
+    #       HOST: ${{ secrets.HOST }}
+    #       USERNAME: ${{ secrets.USER }}
+    #       KEY: ${{ secrets.SSH_KEY }}
+    #     with:
+    #       source: "docker-compose.yaml, default.conf"
+    #       target: "/home/ubuuser/yamdb_final/"
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
         with:
