--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -47,7 +47,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     # needs: build_and_push_to_docker_hub
-    # steps:
+    steps:
     #   - name: copy file via ssh key
     #     uses: appleboy/scp-action@master
     #     env:
