--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
     depends_on:
       - db
     volumes:
-      - ./static_files:/static
+      - ./static_files/:/code/static/
     env_file:
       - ./.env
   nginx:
