--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,13 +2,13 @@ version: '3.8'
 
 volumes:
   postgresql_data:
-  static_files:
+  static:
 
 services:
   db:
     image: postgres:13
     volumes:
-      - ./postgresql_data:/var/lib/postgresql/data/
+      - postgresql_data:/var/lib/postgresql/data/
     env_file:
       - ./.env
   web:
@@ -17,17 +17,18 @@ services:
     depends_on:
       - db
     volumes:
-      - ./static_files/:/code/static/
+      - ./static:/code/static
     env_file:
       - ./.env
+
   nginx:
     image: nginx:1.19.6
     restart: always
     ports:
-      - "8888:80"
+      - "80:80"
     volumes:
-      - ./static_files:/static
-      - ./default.conf:/etc/nginx/conf.d/default.conf
+      - ./static:/static
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     env_file:
       - ./.env
     depends_on:
