--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -44,35 +44,32 @@ jobs:
           tags: konerld/yamdb:latest
 
   deploy:
-    runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
-    steps:
-    #   - name: copy file via ssh key
-    #     uses: appleboy/scp-action@master
-    #     env:
-    #       HOST: ${{ secrets.HOST }}
-    #       USERNAME: ${{ secrets.USER }}
-    #       KEY: ${{ secrets.SSH_KEY }}
-    #     with:
-    #       source: "docker-compose.yaml, default.conf"
-    #       target: "/home/ubuuser/yamdb_final/"
-      - name: executing remote ssh commands to deploy
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY }}
-          script: |
-            docker pull konerld/yamdb
-            docker stop $(sudo docker ps -a -q)
-            rm ~/yamdb_final/.env
-            echo "DB_ENGINE=django.db.backends.postgresql" >> ~/yamdb_final/.env
-            echo "DB_NAME=${{ secrets.PG_DB_NAME }}" >> ~/yamdb_final/.env
-            echo "POSTGRES_USER=${{ secrets.PG_USER }}" >> ~/yamdb_final/.env
-            echo "POSTGRES_PASSWORD=${{ secrets.PG_PASSWD }}" >> ~/yamdb_final/.env
-            echo "DB_HOST=db" >> ~/yamdb_final/.env
-            echo "DB_PORT=5432" >> .env
-            docker-compose -f ~/yamdb_final/docker-compose.yaml up -d
+    if:
+      contains: ('
+        refs/heads/master',
+        refs/heads/master
+        ', github.ref)
+      runs-on: ubuntu-latest
+      needs: build_and_push_to_docker_hub
+      steps:
+        - name: executing remote ssh commands to deploy
+          uses: appleboy/ssh-action@master
+          with:
+            host: ${{ secrets.HOST }}
+            username: ${{ secrets.USER }}
+            key: ${{ secrets.SSH_KEY }}
+            script: |
+              docker pull konerld/yamdb
+              docker-compose stop
+              docker-compose rm -f
+              rm ~/yamdb_final/.env
+              echo "DB_ENGINE=django.db.backends.postgresql" >> ~/yamdb_final/.env
+              echo "DB_NAME=${{ secrets.PG_DB_NAME }}" >> ~/yamdb_final/.env
+              echo "POSTGRES_USER=${{ secrets.PG_USER }}" >> ~/yamdb_final/.env
+              echo "POSTGRES_PASSWORD=${{ secrets.PG_PASSWD }}" >> ~/yamdb_final/.env
+              echo "DB_HOST=db" >> ~/yamdb_final/.env
+              echo "DB_PORT=5432" >> .env
+              docker-compose up -d
 
   send_message:
     runs-on: ubuntu-latest
