--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -1,4 +1,4 @@
-name: yamdb-final workflow
+name: yamdb-final-workflow
 
 on: [push]
 
@@ -22,9 +22,6 @@ jobs:
     - name: Lint with flake8
       run: flake8 .
 
-    - name: Test with pytest
-      run: pytest tests.py
-
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
@@ -44,22 +41,35 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: konerld/flask_hello:latest
+          tags: konerld/yamdb:latest
 
   deploy:
-    runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
-    steps:
-      - name: executing remote ssh commands to deploy
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY }}
-          script: |
-            sudo docker pull konerld/flask_hello
-            sudo docker stop $(sudo docker ps -a -q)
-            sudo docker run --rm -d -p 5000:5000 konerld/flask_hello
+    if:
+      contains: ('
+        refs/heads/master',
+        refs/heads/master
+        ', github.ref)
+      runs-on: ubuntu-latest
+      needs: build_and_push_to_docker_hub
+      steps:
+        - name: executing remote ssh commands to deploy
+          uses: appleboy/ssh-action@master
+          with:
+            host: ${{ secrets.HOST }}
+            username: ${{ secrets.USER }}
+            key: ${{ secrets.SSH_KEY }}
+            script: |
+              docker pull konerld/yamdb
+              docker-compose stop
+              docker-compose rm -f
+              rm ~/yamdb_final/.env
+              echo "DB_ENGINE=django.db.backends.postgresql" >> ~/yamdb_final/.env
+              echo "DB_NAME=${{ secrets.PG_DB_NAME }}" >> ~/yamdb_final/.env
+              echo "POSTGRES_USER=${{ secrets.PG_USER }}" >> ~/yamdb_final/.env
+              echo "POSTGRES_PASSWORD=${{ secrets.PG_PASSWD }}" >> ~/yamdb_final/.env
+              echo "DB_HOST=db" >> ~/yamdb_final/.env
+              echo "DB_PORT=5432" >> .env
+              docker-compose up -d
 
   send_message:
     runs-on: ubuntu-latest
