--- a/.github/yamdb_workflow.yaml
+++ b/.github/yamdb_workflow.yaml
@@ -48,7 +48,7 @@ jobs:
       needs: build_and_push_to_docker_hub
       if:
         contains: ('
-          refs/heads/master',
+          refs/heads/master
           refs/heads/master
           ', github.ref)
       steps:
