--- a/.github/yamdb_workflow.yaml
+++ b/.github/yamdb_workflow.yaml
@@ -47,10 +47,10 @@ jobs:
       runs-on: ubuntu-latest
       needs: build_and_push_to_docker_hub
       if:
-        contains: ('
+        contains('
           refs/heads/master
           refs/heads/master
-          ', github.ref)
+        ', github.ref)
       steps:
         - name: executing remote ssh commands to deploy
           uses: appleboy/ssh-action@master
