--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -59,18 +59,17 @@ jobs:
             username: ${{ secrets.USER }}
             key: ${{ secrets.SSH_KEY }}
             script: |
-              pwd
               docker pull konerld/yamdb
-              docker-compose stop
-              docker-compose rm -f
-              rm .env
+              docker-compose stop -f ~/yamdb_final/
+              docker-compose rm -f ~/yamdb_final/
+              rm ~/yamdb_final/.env
               echo "DB_ENGINE=django.db.backends.postgresql" >> ~/yamdb_final/.env
               echo "DB_NAME=${{ secrets.PG_DB_NAME }}" >> ~/yamdb_final/.env
               echo "POSTGRES_USER=${{ secrets.PG_USER }}" >> ~/yamdb_final/.env
               echo "POSTGRES_PASSWORD=${{ secrets.PG_PASSWD }}" >> ~/yamdb_final/.env
               echo "DB_HOST=db" >> ~/yamdb_final/.env
               echo "DB_PORT=5432" >> .env
-              docker-compose up -d
+              docker-compose up -f ~/yamdb_final/ -d
 
   send_message:
     runs-on: ubuntu-latest
