--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -60,8 +60,8 @@ jobs:
             key: ${{ secrets.SSH_KEY }}
             script: |
               docker pull konerld/yamdb
-              docker-compose stop -f ~/yamdb_final/
-              docker-compose rm -f ~/yamdb_final/
+              docker-compose -f ~/yamdb_final/docker-compose.yaml stop
+              docker-compose -f ~/yamdb_final/docker-compose.yaml rm -f
               rm ~/yamdb_final/.env
               echo "DB_ENGINE=django.db.backends.postgresql" >> ~/yamdb_final/.env
               echo "DB_NAME=${{ secrets.PG_DB_NAME }}" >> ~/yamdb_final/.env
@@ -69,7 +69,7 @@ jobs:
               echo "POSTGRES_PASSWORD=${{ secrets.PG_PASSWD }}" >> ~/yamdb_final/.env
               echo "DB_HOST=db" >> ~/yamdb_final/.env
               echo "DB_PORT=5432" >> .env
-              docker-compose up -f ~/yamdb_final/ -d
+              docker-compose -f ~/yamdb_final/docker-compose.yaml up -d
 
   send_message:
     runs-on: ubuntu-latest
