--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -52,6 +52,14 @@ jobs:
           refs/heads/master
         ', github.ref)
       steps:
+        - name: Copy docker-compose file and config to server
+          uses: appleboy/scp-action@master
+          with:
+            host: ${{ secrets.HOST }}
+            username: ${{ secrets.USER }}
+            key: ${{ secrets.SSH_KEY }}
+            source: "docker-compose.yaml, nginx.conf"
+
         - name: executing remote ssh commands to deploy
           uses: appleboy/ssh-action@master
           with:
@@ -72,7 +80,7 @@ jobs:
               docker-compose -f ~/yamdb_final/docker-compose.yaml up -d
 
 
-  send_message:
+  send_message_after_deploy:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
@@ -81,4 +89,15 @@ jobs:
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: ${{ github.workflow }} успешно выполнен!
+          message: Деплой ${{ github.workflow }} успешно выполнен!
+
+  send_message_without_deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
+      - name: send message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: Тесты и билд ${{ github.workflow }} успешно выполнен!
