--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -82,24 +82,24 @@ jobs:
               docker-compose -f ~/yamdb_final/docker-compose.yaml up -d
 
 
-  send_message_after_deploy:
-    runs-on: ubuntu-latest
-    needs: deploy
-    steps:
-      - name: send message
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TELEGRAM_TO }}
-          token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: Деплой ${{ github.workflow }} успешно выполнен!
-
-  send_message_without_deploy:
-    runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
-    steps:
-      - name: send message
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TELEGRAM_TO }}
-          token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: Тесты и билд ${{ github.workflow }} успешно выполнен!
+#  send_message_after_deploy:
+#    runs-on: ubuntu-latest
+#    needs: deploy
+#    steps:
+#      - name: send message
+#        uses: appleboy/telegram-action@master
+#        with:
+#          to: ${{ secrets.TELEGRAM_TO }}
+#          token: ${{ secrets.TELEGRAM_TOKEN }}
+#          message: Деплой ${{ github.workflow }} успешно выполнен!
+#
+#  send_message_without_deploy:
+#    runs-on: ubuntu-latest
+#    needs: build_and_push_to_docker_hub
+#    steps:
+#      - name: send message
+#        uses: appleboy/telegram-action@master
+#        with:
+#          to: ${{ secrets.TELEGRAM_TO }}
+#          token: ${{ secrets.TELEGRAM_TOKEN }}
+#          message: Тесты и билд ${{ github.workflow }} успешно выполнен!
