--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -52,7 +52,7 @@ jobs:
           refs/heads/main
         ', github.ref)
       steps:
-#        - uses: actions/checkout@master
+        - uses: actions/checkout@master
         - name: Copy docker-compose file and config to server
           uses: appleboy/scp-action@master
           with:
