--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -1,3 +1,4 @@
+# master
 name: yamdb-final-workflow
 
 on: [push]
@@ -46,11 +47,11 @@ jobs:
   deploy:
       runs-on: ubuntu-latest
 #      needs: build_and_push_to_docker_hub
-      if:
-        contains('
-          refs/heads/master
-          refs/heads/main
-        ', github.ref)
+#      if:
+#        contains('
+#          refs/heads/master
+#          refs/heads/main
+#        ', github.ref)
       steps:
         - uses: actions/checkout@master
         - name: Copy docker-compose file and config to server
