--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -3,49 +3,49 @@ name: yamdb-final-workflow
 on: [push]
 
 jobs:
-#  tests:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#    - uses: actions/checkout@v2
-#    - name: Set up Python
-#      uses: actions/setup-python@v2
-#      with:
-#        python-version: 3.8
-#
-#    - name: Install dependencies
-#      run: |
-#        python -m pip install --upgrade pip
-#        pip install flake8 pytest
-#        pip install -r requirements.txt
-#
-#    - name: Lint with flake8
-#      run: flake8 .
-#
-#
-#  build_and_push_to_docker_hub:
-#    name: Push Docker image to Docker Hub
-#    runs-on: ubuntu-latest
-#    needs: tests
-#    steps:
-#      - name: Check out the repo
-#        uses: actions/checkout@v2
-#      - name: Set up Docker Buildx
-#        uses: docker/setup-buildx-action@v1
-#      - name: Login to Docker
-#        uses: docker/login-action@v1
-#        with:
-#          username: ${{ secrets.DOCKER_USERNAME }}
-#          password: ${{ secrets.DOCKER_PASSWORD }}
-#      - name: Push to Docker Hub
-#        uses: docker/build-push-action@v2
-#        with:
-#          push: true
-#          tags: konerld/yamdb:latest
+  tests:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.8
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 pytest
+        pip install -r requirements.txt
+
+    - name: Lint with flake8
+      run: flake8 .
+
+
+  build_and_push_to_docker_hub:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to Docker
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: konerld/yamdb:latest
 
   deploy:
       runs-on: ubuntu-latest
-#      needs: build_and_push_to_docker_hub
+      needs: build_and_push_to_docker_hub
       if:
         contains('
           refs/heads/master
@@ -82,24 +82,29 @@ jobs:
               docker-compose -f ~/yamdb_final/docker-compose.yaml up -d
 
 
-#  send_message_after_deploy:
-#    runs-on: ubuntu-latest
-#    needs: deploy
-#    steps:
-#      - name: send message
-#        uses: appleboy/telegram-action@master
-#        with:
-#          to: ${{ secrets.TELEGRAM_TO }}
-#          token: ${{ secrets.TELEGRAM_TOKEN }}
-#          message: Деплой ${{ github.workflow }} успешно выполнен!
-#
-#  send_message_without_deploy:
-#    runs-on: ubuntu-latest
-#    needs: build_and_push_to_docker_hub
-#    steps:
-#      - name: send message
-#        uses: appleboy/telegram-action@master
-#        with:
-#          to: ${{ secrets.TELEGRAM_TO }}
-#          token: ${{ secrets.TELEGRAM_TOKEN }}
-#          message: Тесты и билд ${{ github.workflow }} успешно выполнен!
+  send_message_after_deploy:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: send message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: Деплой ${{ github.workflow }} успешно выполнен!
+
+  send_message_without_deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    if:
+      not contains('
+      refs/heads/master
+      refs/heads/main
+      ', github.ref)
+    steps:
+      - name: send message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: Тесты и билд ${{ github.workflow }} успешно выполнен!
