--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -82,27 +82,20 @@ jobs:
               docker-compose -f ~/yamdb_final/docker-compose.yaml up -d
 
 
-  send_message_after_deploy:
+  send_telegram_message:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
-      - name: send message
+      - name: send message if deploy done
+        needs: build_and_push_to_docker_hub
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: Деплой ${{ github.workflow }} успешно выполнен!
 
-  send_message_without_deploy:
-    runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
-    if:
-      not contains('
-      refs/heads/master
-      refs/heads/main
-      ', github.ref)
-    steps:
-      - name: send message
+      - name: send message if build only
+        needs: deploy
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
