--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -82,22 +82,13 @@ jobs:
               docker-compose -f ~/yamdb_final/docker-compose.yaml up -d
 
 
-  send_telegram_message:
+  send_message_after_deploy:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
-      - name: send message if deploy done
-        needs: build_and_push_to_docker_hub
+      - name: send message
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: Деплой ${{ github.workflow }} успешно выполнен!
-
-      - name: send message if build only
-        needs: deploy
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TELEGRAM_TO }}
-          token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: Тесты и билд ${{ github.workflow }} успешно выполнен!
