--- a/yamdb_workflow.yaml
+++ b/yamdb_workflow.yaml
@@ -47,11 +47,21 @@ jobs:
       runs-on: ubuntu-latest
       needs: build_and_push_to_docker_hub
       if:
-        contains: ('
-          refs/heads/master',
+        contains('
           refs/heads/master
-          ', github.ref)
+          refs/heads/main
+        ', github.ref)
       steps:
+        - uses: actions/checkout@master
+        - name: Copy docker-compose file and config to server
+          uses: appleboy/scp-action@master
+          with:
+            host: ${{ secrets.HOST }}
+            username: ${{ secrets.USER }}
+            key: ${{ secrets.SSH_KEY }}
+            source: "docker-compose.yaml, nginx.conf"
+            target: "~/yamdb_final/"
+
         - name: executing remote ssh commands to deploy
           uses: appleboy/ssh-action@master
           with:
@@ -60,8 +70,8 @@ jobs:
             key: ${{ secrets.SSH_KEY }}
             script: |
               docker pull konerld/yamdb
-              docker-compose stop
-              docker-compose rm -f
+              dockergi-compose -f ~/yamdb_final/docker-compose.yaml stop
+              docker-compose -f ~/yamdb_final/docker-compose.yaml rm -f
               rm ~/yamdb_final/.env
               echo "DB_ENGINE=django.db.backends.postgresql" >> ~/yamdb_final/.env
               echo "DB_NAME=${{ secrets.PG_DB_NAME }}" >> ~/yamdb_final/.env
@@ -69,9 +79,10 @@ jobs:
               echo "POSTGRES_PASSWORD=${{ secrets.PG_PASSWD }}" >> ~/yamdb_final/.env
               echo "DB_HOST=db" >> ~/yamdb_final/.env
               echo "DB_PORT=5432" >> .env
-              docker-compose up -d
+              docker-compose -f ~/yamdb_final/docker-compose.yaml up -d
 
-  send_message:
+
+  send_message_after_deploy:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
@@ -80,4 +91,4 @@ jobs:
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: ${{ github.workflow }} успешно выполнен!
+          message: Деплой ${{ github.workflow }} успешно выполнен!
