--- a/.github/workflows/yamdb_workflow.yaml
+++ b/.github/workflows/yamdb_workflow.yaml
@@ -5,20 +5,17 @@ on: [push]
 jobs:
   tests:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
         pip install -r requirements.txt
-
     - name: Lint with flake8
       run: flake8 .
 
@@ -37,11 +34,13 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
           push: true
           tags: konerld/yamdb:latest
+
 
   deploy:
       runs-on: ubuntu-latest
@@ -61,17 +60,13 @@ jobs:
             key: ${{ secrets.SSH_KEY }}
             source: "docker-compose.yaml, nginx.conf"
             target: "~/yamdb_final/"
-
-        - name: executing remote ssh commands to deploy
+        - name: executing ssh cmd for env file
           uses: appleboy/ssh-action@master
           with:
             host: ${{ secrets.HOST }}
             username: ${{ secrets.USER }}
             key: ${{ secrets.SSH_KEY }}
             script: |
-              docker pull konerld/yamdb
-              dockergi-compose -f ~/yamdb_final/docker-compose.yaml stop
-              docker-compose -f ~/yamdb_final/docker-compose.yaml rm -f
               rm ~/yamdb_final/.env
               echo "DB_ENGINE=django.db.backends.postgresql" >> ~/yamdb_final/.env
               echo "DB_NAME=${{ secrets.PG_DB_NAME }}" >> ~/yamdb_final/.env
@@ -79,6 +74,16 @@ jobs:
               echo "POSTGRES_PASSWORD=${{ secrets.PG_PASSWD }}" >> ~/yamdb_final/.env
               echo "DB_HOST=db" >> ~/yamdb_final/.env
               echo "DB_PORT=5432" >> .env
+        - name: executing remote ssh cmd to deploy
+          uses: appleboy/ssh-action@master
+          with:
+            host: ${{ secrets.HOST }}
+            username: ${{ secrets.USER }}
+            key: ${{ secrets.SSH_KEY }}
+            script: |
+              docker pull konerld/yamdb
+              docker-compose -f ~/yamdb_final/docker-compose.yaml stop
+              docker-compose -f ~/yamdb_final/docker-compose.yaml rm -f web
               docker-compose -f ~/yamdb_final/docker-compose.yaml up -d
 
 
